--- a/css/style.css
+++ b/css/style.css
@@ -28,20 +28,28 @@ main {
 }
 
 
-.stars-outer {
+.estrellas {
     display: inline-block;
     position: relative;
     font-size: 1.5em;
-    color: #ccc;
+    color: #FFA726; /* Cambiar el color a amarillo medio naranja */
 }
 
-.stars-inner {
-    display: block;
+.list-group-item  {
+    background-color: #212529;
+}
+
+h2 {
+    color: grey;
+}
+p {
+    color: grey;
+}
+
+.dropdown-top-right {
     position: absolute;
     top: 0;
-    left: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 0;
-    color: #fdd835; 
+    right: 0;
+    margin-top: 30px; 
+    margin-right: 30px; 
 }
